--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Experiência Profissional</h2>
+                <h2>Experiência Acadêmica</h2>
             </button>
 
             <div class="content">
